# flowcite

./: DEVELOPER_GUIDE.md  README.md  ROADMAP.md  SPEC.md  debug_crossref.py  debug_enrich.py  demo_0.1.0.py  notes_dev.md  notes_dev.py  pyproject.toml  session_cache.json
citation_package/: flowcite_report.bib  flowcite_report.csl.json  flowcite_report.md  flowcite_report.txt
devguide/: README.md  roadmap.md  status.md  vision.md  workflow.md
docs/: conf.py  index.md
docs/content/about/: citation.md  installation.md  relation_to_duecredit.md  what_is_flowcite.md  who_is_behind.md
docs/content/api/: api_reference.md
docs/content/developer_guide/: architecture.md  contributing.md  decisions.md  decorators.md  formats.md  index.md  interoperability.md  onboarding.md  registry_and_collector.md  roadmap.md  status.md  what_is_flowcite.md
docs/content/showcase/: conditional_citations.ipynb  quickstart.ipynb
docs/content/user_guide/: index.md  injections.md  registration.md  reporting.md  tracking.md
flowcite/: __init__.py  cli.py
flowcite/contrib/: duecredit_compat.py  jupyter.py  web_ui.py
flowcite/core/: __init__.py  cff.py  collector.py  context.py  decorators.py  hooks.py  injections.py  inspection.py  registry.py  report.py  standard_injections.py
flowcite/formats/: __init__.py  bibtex.py  csl_json.py  jsonfmt.py  latex.py  markdown.py  provenance.py  text.py
standards/: FLOWCITE_GUIDE.md
tests/: test_bibtex.py  test_bibtex_load.py  test_collector.py  test_context.py  test_csl_json.py  test_discovery.py  test_hooks.py  test_latex.py  test_pdf.py  test_provenance.py  test_registry.py  test_report.py
